--- a/settings/project.json
+++ b/settings/project.json
@@ -1,11 +1,11 @@
 {
-  "start-scene": "",
-  "group-list": [
-    "default"
-  ],
   "collision-matrix": [
     [
       true
     ]
-  ]
+  ],
+  "group-list": [
+    "default"
+  ],
+  "start-scene": "2e0c4a30-6a1a-4cc8-aa31-3ec574b345ed"
 }
